# rdp-v9

./: .gitattributes  .gitmodules  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml  FONTS_README.md
app/src/main/cpp/: CMakeLists.txt  SETUP.md  hexrdp_jni.c
app/src/main/java/com/gotohex/rdp/: HexRDPApp.kt  TrimMemoryBus.kt
app/src/main/java/com/gotohex/rdp/audio/: SoundManager.kt
app/src/main/java/com/gotohex/rdp/data/db/: ConnectionLogDao.kt  Converters.kt  HexRdpDatabase.kt
app/src/main/java/com/gotohex/rdp/data/model/: ConnectionLog.kt  RdpProfile.kt
app/src/main/java/com/gotohex/rdp/data/repository/: AppSettingsRepository.kt  ConnectionLogRepository.kt  RdpProfileRepository.kt
app/src/main/java/com/gotohex/rdp/di/: AppModule.kt
app/src/main/java/com/gotohex/rdp/rdp/native/: AFreeRdpBridge.kt
app/src/main/java/com/gotohex/rdp/rdp/protocol/: RdpRemoteAdapter.kt
app/src/main/java/com/gotohex/rdp/remote/: RemoteSessionClient.kt  RemoteSessionFactory.kt  SshTunneledClient.kt
app/src/main/java/com/gotohex/rdp/security/: CryptoHelper.kt  QuickConnectCache.kt
app/src/main/java/com/gotohex/rdp/session/: SessionTabManager.kt
app/src/main/java/com/gotohex/rdp/ssh/protocol/: SshClient.kt  SshKeyMap.kt  SshTunnelManager.kt
app/src/main/java/com/gotohex/rdp/transfer/: FileTransferManager.kt
app/src/main/java/com/gotohex/rdp/ui/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/gotohex/rdp/ui/components/: Components.kt  SessionTabsBar.kt  SwipeableCard.kt
app/src/main/java/com/gotohex/rdp/ui/screens/: AppLockScreen.kt  ConnectionHistoryScreen.kt  FileTransferScreen.kt  HomeScreen.kt  RdpSessionActivity.kt  RdpSessionService.kt  SettingsScreen.kt
app/src/main/java/com/gotohex/rdp/ui/screens/terminal/: TerminalScreen.kt
app/src/main/java/com/gotohex/rdp/ui/theme/: Color.kt  SpaceIcons.kt  Theme.kt
app/src/main/java/com/gotohex/rdp/util/: LastFrameStore.kt  RdpFileParser.kt  WakeOnLanManager.kt
app/src/main/java/com/gotohex/rdp/vnc/protocol/: VncClient.kt
app/src/main/java/com/undatech/opaque/: AuthenticationException.kt  Connection.kt  RfbConnectable.kt
app/src/main/java/com/undatech/opaque/input/: RemotePointer.kt
app/src/main/res/drawable/: ic_add_aurora.xml  ic_add_nebula.xml  ic_add_space.xml  ic_close_aurora.xml  ic_close_nebula.xml  ic_close_space.xml  ic_code_aurora.xml  ic_code_nebula.xml  ic_code_space.xml  ic_file_transfer_aurora.xml  ic_file_transfer_nebula.xml  ic_file_transfer_space.xml  ic_fingerprint_aurora.xml  ic_fingerprint_nebula.xml  ic_fingerprint_space.xml  ic_flash_aurora.xml  ic_flash_nebula.xml  ic_flash_space.xml  ic_folder_aurora.xml  ic_folder_nebula.xml  ic_folder_space.xml  ic_grid_aurora.xml  ic_grid_nebula.xml  ic_grid_space.xml  ic_history_aurora.xml  ic_history_nebula.xml  ic_history_space.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_lock_aurora.xml  ic_lock_nebula.xml  ic_lock_space.xml  ic_palette_aurora.xml  ic_palette_nebula.xml  ic_palette_space.xml  ic_phone_aurora.xml  ic_phone_nebula.xml  ic_phone_space.xml  ic_rdp_aurora.xml  ic_rdp_nebula.xml  (+28 more)
app/src/main/res/font/: font_arabic.xml  font_body.xml  font_display.xml  font_mono.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
